--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,5 +1,6 @@
 <div class="row">
   <div class="col-md-5">
+    <div>{{ixx}}</div>
     <app-recipes-list></app-recipes-list>
   </div>
   <div class="col-md-7">
