--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,10 +15,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Recipes</a>
+          <a class="nav-link active" aria-current="page" href="javascript:void(0);" (click)="onSelect('recipe')" >Recipes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Recipes</a>
+          <a class="nav-link active" aria-current="page" href="javascript:void(0);" (click)="onSelect('shopping-list')">Shopping List</a>
         </li>
       </ul>
       <ul class="navbar-nav mr-auto mb-2 mb-lg-0 ">
