--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -1,11 +1,11 @@
 <div class="row">
-  <div class="col-md-12">
-    <img src="" class="img-responsive" />
+  <div class="col-md-3">
+    <img [src]="recipeDetails.imagePath" class="img-thumbnail" />
   </div>
 </div>
 <div class="row">
   <div class="col-md-12">
-    <h1>Recipe Name</h1>
+    <h1>{{recipeDetails.name}}</h1>
   </div>
 </div>
 <div class="row">
@@ -35,7 +35,7 @@
 </div>
 <div class="row">
   <div class="col-md-12">
-    <h5>Description</h5>
+    <h5>{{recipeDetails.desc}}</h5>
   </div>
 </div>
 
