--- a/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
+++ b/src/app/recipes/recipes-list/recipes-item/recipes-item.component.html
@@ -1,1 +1,14 @@
-<p>recipes-item works!</p>
+<a href="javascript:void(0);" class="list-group-item list-group-item-action d-flex" (click)="onSendList()">
+  <div class="me-auto">
+    <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+    <p class="list-group-item-text">{{ recipe.desc }}</p>
+  </div>
+  <div>
+    <img
+      [src]="recipe.imagePath"
+      alt="{{ recipe.name }}"
+      class="img-responsive"
+      style="max-height: 50px"
+    />
+  </div>
+</a>
