--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,9 +1,11 @@
 <div class="row">
   <div class="col-md-5">
-    <div>{{ixx}}</div>
-    <app-recipes-list></app-recipes-list>
+    <app-recipes-list (recipeWasSelected)="selectedRecipe = $event"></app-recipes-list>
   </div>
   <div class="col-md-7">
-    <app-recipes-detail></app-recipes-detail>
+    <app-recipes-detail *ngIf="selectedRecipe; else noDataCont" [recipeDetails]="selectedRecipe"></app-recipes-detail>
+    <ng-template #noDataCont>
+      <p>No List Selected!!</p>
+    </ng-template>
   </div>
 </div>
