--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -4,19 +4,19 @@
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
-          <input type="text" id="name" class="form-control" />
+          <input type="text" id="name" class="form-control" #nameInput />
         </div>
         <div class="col-sm-5 form-group">
           <label for="amount">amount</label>
-          <input type="text" id="amount" class="form-control" />
+          <input type="text" id="amount" class="form-control" #amountInput />
         </div>
       </div>
-      <hr>
+      <hr />
       <div class="row">
         <div class="col-md-12">
-            <button class="btn btn-success" type="submit">Add</button>
-            <button class="btn btn-danger" type="button">delete</button>
-            <button class="btn btn-primary" type="button">clear</button>
+          <button class="btn btn-success" type="submit" (click)="onAddItem()">Add</button>
+          <button class="btn btn-danger" type="button">delete</button>
+          <button class="btn btn-primary" type="button">clear</button>
         </div>
       </div>
     </form>
