--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -23,7 +23,7 @@
       </ul>
       <ul class="navbar-nav mr-auto mb-2 mb-lg-0 ">
         <li class="nav-item dropdown">
-          <a
+          <a 
             class="nav-link dropdown-toggle"
             href="#"
             role="button"
@@ -32,7 +32,8 @@
           >
             Manage
           </a>
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu"
+          >
             <li><a class="dropdown-item" href="#">Save Data</a></li>
             <li><a class="dropdown-item" href="#">Fetch Data</a></li>
           </ul>
