--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Recipe Book</a>
+    <a class="navbar-brand" href="javascript:void(0)" routerLink="/"
+      >Recipe Book</a
+    >
     <button
       class="navbar-toggler"
       type="button"
@@ -15,15 +17,29 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="javascript:void(0);" (click)="onSelect('recipe')" >Recipes</a>
+          <a
+            class="nav-link fw-bold"
+            aria-current="page"
+            href="javascript:void(0);"
+            routerLink="/recipes"
+            routerLinkActive="link-danger"
+            >Recipes</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="javascript:void(0);" (click)="onSelect('shopping-list')">Shopping List</a>
+          <a
+            class="nav-link fw-bold"
+            aria-current="page"
+            href="javascript:void(0);"
+            (click)="onLoadServe()"
+            routerLinkActive="link-danger"
+            >Shopping List</a
+          >
         </li>
       </ul>
-      <ul class="navbar-nav mr-auto mb-2 mb-lg-0 ">
+      <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
-          <a 
+          <a
             class="nav-link dropdown-toggle"
             href="#"
             role="button"
@@ -32,8 +48,7 @@
           >
             Manage
           </a>
-          <ul class="dropdown-menu"
-          >
+          <ul class="dropdown-menu">
             <li><a class="dropdown-item" href="#">Save Data</a></li>
             <li><a class="dropdown-item" href="#">Fetch Data</a></li>
           </ul>
