--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -7,7 +7,7 @@
 <div class="row">
   <div class="col-md-12">
     <div class="list-group">
-      <app-recipes-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl" (recipeSelected)="onRecipeSelected(recipeEl)"></app-recipes-item>
+      <app-recipes-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipes-item>
     </div>
   </div>
 </div>
