--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,14 +1,12 @@
 <div class="row">
   <div class="col-xs-10">
-    <ul>
+    <!-- <ul>
       <li *ngFor="let account of accounts">
         {{ account.name }}
       </li>
-    </ul>
+    </ul> -->
 
-    <app-shopping-edit
-      (ingridentAdded)="onIngradientAdded($event)"
-    ></app-shopping-edit>
+    <app-shopping-edit></app-shopping-edit>
     <hr />
     <ul class="list-group">
       <a
