--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -36,6 +36,17 @@
             >Shopping List</a
           >
         </li>
+
+        <li class="nav-item">
+          <a
+            class="nav-link fw-bold"
+            aria-current="page"
+            href="javascript:void(0);"
+            [routerLink]="['activeusers','5','sanket']"
+            routerLinkActive="link-danger"
+            >Testing</a
+          >
+        </li>
       </ul>
       <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
         <li class="nav-item dropdown">
