--- a/src/app/@practice/activeusers/activeusers.component.html
+++ b/src/app/@practice/activeusers/activeusers.component.html
@@ -1,1 +1,7 @@
-<p>activeusers works!</p>
+<p>my name is {{ user.name }}. and age is {{ user.id }}.</p>
+<a
+  [routerLink]="['/activeusers', '18', 'mellisa']"
+  [queryParams]="{ allowEdit: '1', justMeme:'true' }"
+  fragment="loading"
+  >my name.</a
+>
