--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary mb-5">
+<nav
+  class="navbar navbar-expand-lg mb-5  navbar-dark bg-primary border-bottom shadow"
+>
   <div class="container-fluid">
     <a class="navbar-brand" href="javascript:void(0)" routerLink="/"
       >Recipe Book</a
@@ -22,7 +24,7 @@
             aria-current="page"
             href="javascript:void(0);"
             routerLink="/recipes"
-            routerLinkActive="link-danger"
+            routerLinkActive="active"
             >Recipes</a
           >
         </li>
@@ -31,8 +33,8 @@
             class="nav-link fw-bold"
             aria-current="page"
             href="javascript:void(0);"
-            (click)="onLoadServe()"
-            routerLinkActive="link-danger"
+            routerLink="/shoppingList"
+            routerLinkActive="active"
             >Shopping List</a
           >
         </li>
@@ -42,8 +44,8 @@
             class="nav-link fw-bold"
             aria-current="page"
             href="javascript:void(0);"
-            [routerLink]="['activeusers','5','sanket']"
-            routerLinkActive="link-danger"
+            [routerLink]="['activeusers', '5', 'sanket']"
+            routerLinkActive="active"
             >Testing</a
           >
         </li>
