--- a/src/app/recipes/recipes-list/recipes-list.component.html
+++ b/src/app/recipes/recipes-list/recipes-list.component.html
@@ -7,7 +7,11 @@
 <div class="row">
   <div class="col-md-12">
     <div class="list-group">
-      <app-recipes-item *ngFor="let recipeEl of recipes" [recipe]="recipeEl"></app-recipes-item>
+      <app-recipes-item
+        *ngFor="let recipeEl of recipes; let i = index"
+        [recipe]="recipeEl"
+        [index]="i"
+      ></app-recipes-item>
     </div>
   </div>
 </div>
