--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -25,8 +25,17 @@
           Mange Recipe
         </button>
         <ul class="dropdown-menu">
-          <li><a class="dropdown-item" href="javascript:void(0);" (click)="sendToSL()">To Shopping List</a></li>
-          <li><a class="dropdown-item" href="#">Edit Recipe</a></li>
+          <li>
+            <a
+              class="dropdown-item"
+              href="javascript:void(0);"
+              (click)="sendToSL()"
+              >To Shopping List</a
+            >
+          </li>
+          <li>
+            <a class="dropdown-item" href="javascript:void(0);" (click)="onRecipeEdit()">Edit Recipe</a>
+          </li>
           <li><a class="dropdown-item" href="#">Delete Recipe</a></li>
         </ul>
       </div>
