--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -62,8 +62,8 @@
             Manage
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Save Data</a></li>
-            <li><a class="dropdown-item" href="#">Fetch Data</a></li>
+            <li><a class="dropdown-item" href="javascript:void(0)" (click)="onSaveData()">Save Data</a></li>
+            <li><a class="dropdown-item" href="javascript:void(0)" (click)="onFetchData()">Fetch Data</a></li>
           </ul>
         </li>
       </ul>
