--- a/src/app/recipes/recipes-detail/recipes-detail.component.html
+++ b/src/app/recipes/recipes-detail/recipes-detail.component.html
@@ -36,7 +36,7 @@
           <li>
             <a class="dropdown-item" href="javascript:void(0);" (click)="onRecipeEdit()">Edit Recipe</a>
           </li>
-          <li><a class="dropdown-item" href="#">Delete Recipe</a></li>
+          <li><a class="dropdown-item" href="javascript:void(0);" (click)="onRecipeDelete()">Delete Recipe</a></li>
         </ul>
       </div>
     </div>
