--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12">
-    <form>
+    <form (submit)="formOnsubmit()" #p>
       <div class="row">
         <div class="col-sm-5 form-group">
           <label for="name">Name</label>
