--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <nav
-  class="navbar navbar-expand-lg mb-5  navbar-dark bg-primary border-bottom shadow"
+  class="navbar navbar-expand-lg mb-5 navbar-dark bg-primary border-bottom shadow"
 >
   <div class="container-fluid">
     <a class="navbar-brand" href="javascript:void(0)" routerLink="/"
@@ -18,7 +18,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="isAuthenticated">
           <a
             class="nav-link fw-bold"
             aria-current="page"
@@ -39,19 +39,22 @@
           >
         </li>
 
-        <li class="nav-item">
+        <li class="nav-item" *ngIf="!isAuthenticated">
           <a
             class="nav-link fw-bold"
             aria-current="page"
             href="javascript:void(0);"
-            [routerLink]="['activeusers', '5', 'sanket']"
+            routerLink="/auth"
             routerLinkActive="active"
-            >Testing</a
+            >Sign Up</a
           >
         </li>
       </ul>
       <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
-        <li class="nav-item dropdown">
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <a class="nav-link" href="#"> Logout </a>
+        </li>
+        <li class="nav-item dropdown" *ngIf="isAuthenticated">
           <a
             class="nav-link dropdown-toggle"
             href="#"
@@ -62,8 +65,22 @@
             Manage
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="javascript:void(0)" (click)="onSaveData()">Save Data</a></li>
-            <li><a class="dropdown-item" href="javascript:void(0)" (click)="onFetchData()">Fetch Data</a></li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="javascript:void(0)"
+                (click)="onSaveData()"
+                >Save Data</a
+              >
+            </li>
+            <li>
+              <a
+                class="dropdown-item"
+                href="javascript:void(0)"
+                (click)="onFetchData()"
+                >Fetch Data</a
+              >
+            </li>
           </ul>
         </li>
       </ul>
